yew-functional-macro/tests/function_attr/mut-ref-props-param-fail.stderr
error: reference must not be mutable
  --> $DIR/mut-ref-props-param-fail.rs:10:17
   |
10 | fn comp(props: &mut Props) -> Html {
   |                 ^^^
